Fix overflow of info

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -23,6 +23,9 @@
 @utility border-color {
     @apply border-light-gray dark:border-dark-gray;
 }
+@utility wrap-long-text {
+    @apply whitespace-nowrap overflow-hidden text-ellipsis;
+}
 
 @layer base {
     a {
